syntax = "proto3";
option cc_generic_services = true;


message makeOrderRequest
{
    int32 price = 1;
    string goods = 2;
}

message makeOrderResponse
{
    int32 ret_code = 1;
    string res_info = 2;
}

service Service
{
    rpc makeOrder(makeOrderRequest) returns (makeOrderResponse);
}

